samples/_failures_safe/1761545729_4777aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f55499fc.c: In function ‘main’:
./samples/SAFE/__tmp_f55499fc.c:166:13: error: expected expression at end of input
  166 |             strncpy(command,
      |             ^~~~~~~
./samples/SAFE/__tmp_f55499fc.c:166:13: error: too few arguments to function ‘strncpy’
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_f55499fc.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_f55499fc.c:166:13: error: expected declaration or statement at end of input
  166 |             strncpy(command,
      |             ^~~~~~~
./samples/SAFE/__tmp_f55499fc.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f55499fc.c:166:13: error: expected declaration or statement at end of input
